--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "hexlet-code"
+name = "hexlet_code"
 version = "0.1.0"
 description = "Compares two configuration files and shows a difference."
-requires-python = ">=3.12"
-dependencies = []
+readme = "README.md"
+requires-python = ">=3.6"
 
 [project.scripts]
 gendiff = "hexlet_code.gendiff:main"
