--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -25,13 +25,13 @@ jobs:
         run: bash -c "PYTHONPATH=src make test"
       - name: Run test coverage
         run: bash -c "PYTHONPATH=src make test-coverage"
-      - name: SonarQubeScan
-        uses: sonarsource/sonarqube-scan-action@v6
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=Grimmlok626_python-project-50
-            -Dsonar.organization=grimmlok626
-            -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.branch.name=main
+#      - name: SonarQubeScan
+#        uses: sonarsource/sonarqube-scan-action@v6
+#        env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        with:
+#          args: >
+#            -Dsonar.projectKey=Grimmlok626_python-project-50
+#            -Dsonar.organization=grimmlok626
+#            -Dsonar.python.coverage.reportPaths=coverage.xml
+#            -Dsonar.branch.name=main
