--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,7 +20,7 @@ jobs:
           pip install --upgrade pip
           pip install hatch
           hatch env create
-          hatch develop
+          hatch shell
 
       - name: Run linter
         run: |
