--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,8 @@ readme = "README.md"
 requires-python = ">=3.6"
 
 [project.scripts]
-gendiff = "hexlet_code.gendiff:main"
+gendiff = "gendiff:main"  # CLI команда вызывает main() в gendiff.py
 
 [tool.hatch.build.targets.wheel]
-packages = ["hexlet_code"]
-
-[tool.hatch.dev-dependencies]
-uvicorn = "^0.22.0"
-ruff = "^0.0.243"
-pytest = "^7.0"
+packages = ["hexlet_code"]   # пакет из src/hexlet_code
+modules = ["gendiff"]     
