--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,11 @@ requires-python = ">=3.6"
 dependencies = [
     # добавьте сюда зависимости вашего проекта, например:
     # "requests>=2.0",
+    "ruff>=0.0.17",
 ]
 
 [project.scripts]
-gendiff = "gendiff:main"
+gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.hatch.build]
 sources = ["gendiff"]
@@ -24,12 +25,10 @@ packages = ["gendiff"]
 
 [tool.hatch.metadata]
 dependencies = [
-  # зависимости для работы проекта — оставьте пустым или заполните по необходимости
 ]
 
 [tool.hatch.metadata.dev-dependencies]
 test = [
   "pytest>=8.4.2",
-  "flake8",
-  # при необходимости добавьте другие dev-зависимости
+  "ruff"
 ]
