--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "gendiff"
+name = "hexlet-code"
 version = "0.1.0"
 description = "Compares two configuration files and shows a difference."
 readme = "README.md"
