--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,42 +1,52 @@
-name: Build
+name: CI Workflow
 
 on:
   push:
     branches:
-      - main
+      - '**'
   pull_request:
-    types: [opened, synchronize, reopened]
 
 jobs:
-  sonarqube:
-    name: SonarQube
+  build:
     runs-on: ubuntu-latest
 
+    env:
+      PYTHONPATH: .
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Upgrade pip and install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
+          pip install hatch
+          # Тут можно добавлять любые дополнительные зависимости, если потребуется
 
-      - name: Install package in editable mode
+      - name: Create environment and install project
         run: |
-          pip install -e .
+          hatch env create
+          hatch run pip install -e .
 
-      # Допустим, у вас есть команда запуска тестов, если она нужна:
+      - name: Run linter (ruff)
+        run: |
+          hatch run ruff .
+
       - name: Run tests
         run: |
-          PYTHONPATH=. python -m pytest --maxfail=1 --disable-warnings
-          
-      - name: Run SonarQube Scan
+          hatch run pytest --maxfail=1 --disable-warnings
+
+      - name: Run test coverage
+        run: |
+          hatch run pytest --maxfail=1 --disable-warnings --cov=gendiff
+
+      - name: Run SonarQube Scan (только на ветке main)
+        if: github.ref == 'refs/heads/main'
         uses: SonarSource/sonarqube-scan-action@v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectKey: Grimmlok626_python-project-50
