--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
 
     env:
       PYTHONPATH: .
+
     steps:
       - uses: actions/checkout@v4
 
@@ -24,24 +25,32 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install hatch
-          # Тут можно добавлять любые дополнительные зависимости, если потребуется
 
-      - name: Create environment and install project
+      - name: Создать окружение и установить проект
         run: |
           hatch env create
           hatch run pip install -e .
+
+      # Теперь вызываем make install и make test для корректной работы
+      - name: Установить пакет и запустить тесты
+        run: |
+          make install
+          make test
 
       - name: Run linter (ruff)
         run: |
           hatch run ruff .
 
-      - name: Run tests
+      - name: Run тесты через hatch (обычный вариант)
         run: |
-          hatch run pytest --maxfail=1 --disable-warnings
+          # Установка пакета
+          hatch run pip install -e .
+          # Запуск тестов с PYTHONPATH=.
+          PYTHONPATH=. hatch run pytest --maxfail=1 --disable-warnings
 
       - name: Run test coverage
         run: |
-          hatch run pytest --maxfail=1 --disable-warnings --cov=gendiff
+          PYTHONPATH=. hatch run pytest --maxfail=1 --disable-warnings --cov=gendiff
 
       - name: Run SonarQube Scan (только на ветке main)
         if: github.ref == 'refs/heads/main'
