--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,19 @@ dependencies = [
   "pytest-cov>=6.1.1",
   "pyyaml>=6.0.2",
 ]
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=8.3.5",
+  "ruff>=0.11.8"
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
-
-[dependency-groups]
-dev = [
-  "pytest>=8.3.5", 
-  "ruff>=0.11.8"
-  ]
 
 [project.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
