--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectKey: Grimmlok626_python-project-50
-          organization: Grimmlok626
-          host-url: https://sonarcloud.io
+          args: >
+            -Dsonar.projectKey=Grimmlok626_python-project-50
+            -Dsonar.organization=Grimmlok626
+            -Dsonar.host.url=https://sonarcloud.io
